--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
-    "expo": "~53.0.20",
+    "expo": "^54.0.7",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-camera": "~16.1.11",
-    "expo-constants": "~17.1.7",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "expo-dev-client": "~5.2.4",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.12",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.5",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
