--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.8",
     "expo-dev-client": "~6.0.12",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.5",
     "expo-status-bar": "~3.0.8",
