--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
-    "expo": "54.0.13",
+    "expo": "^54.0.13",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.8",
     "expo-dev-client": "~6.0.14",
