--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^54.0.13",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.8",
+    "expo-file-system": "~18.0.4",
     "expo-dev-client": "~6.0.14",
     "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
