--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "app/index.jsx"
+    "app/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    ".expo",
+    "dist"
   ]
 }
