--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ yarn-error.*
 .env*.local
 
 # Google Play Service Account (contains sensitive credentials)
-google-service-account.json
+# google-service-account.json
 
 # typescript
 *.tsbuildinfo
